--- a/navbar.html
+++ b/navbar.html
@@ -1,95 +1,6 @@
 <html>
-    <head>
-        <style>
-            #con{
-                width: 100%;
-                height: 500px;
-                display: flex;
-                margin: auto;
-            }
-            .ab{
-                width: 30%;
-                height: 500px;
-    
-                margin: auto;
-                box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-            }
-            img{
-                width: 100%;
-                height: 70%;
-            }
-            h1{
-                margin: auto;
-                margin-left: 20%;
-                margin-top: 5%;
-            }
-            p{
-                margin-left: 40%; 
-            }
-            button{
-                margin-left: 40%; 
-                background-color: rgb(55, 140, 151);
-                color: black;
-                border: 1px solid rgb(55, 140, 151);
-            }
-            #cona{
-                width: 100%;
-                height: 500px;
-                display: flex;
-                margin: auto;
-                margin-top: 2%;
-                
-            }
-
-
-        </style>
-    </head>
+    <title></title>
     <body>
-        <div id="con">
-            <div class="ab">
-                <img src="https://assetscdn1.paytm.com/images/cinema/Doctor-Strange--In-The-Multiverse-Of-Madness-r-705x750-36f0e140-b752-11ec-a762-319bdb0970f2.jpg"/>
-                <h1>Doctor Strange 2</h1>
-                <p>Rating:-4.5</p>
-                <button>Book now</button>
-
-            </div>
-            <div class="ab">
-                <img src="https://assetscdn1.paytm.com/images/cinema/Doctor-Strange--In-The-Multiverse-Of-Madness-r-705x750-36f0e140-b752-11ec-a762-319bdb0970f2.jpg"/>
-                <h1>Doctor Strange 2</h1>
-                <p>Rating:-4.5</p>
-                <button>Book now</button>
-
-            </div>
-            <div class="ab">
-                <img src="https://assetscdn1.paytm.com/images/cinema/Doctor-Strange--In-The-Multiverse-Of-Madness-r-705x750-36f0e140-b752-11ec-a762-319bdb0970f2.jpg"/>
-                <h1>Doctor Strange 2</h1>
-                <p>Rating:-4.5</p>
-                <button>Book now</button>
-
-            </div>
-        </div>
-        <div id="cona">
-            <div class="ab">
-                <img src="https://assetscdn1.paytm.com/images/cinema/Doctor-Strange--In-The-Multiverse-Of-Madness-r-705x750-36f0e140-b752-11ec-a762-319bdb0970f2.jpg"/>
-                <h1>Doctor Strange 2</h1>
-                <p>Rating:-4.5</p>
-                <button>Book now</button>
-
-            </div>
-            <div class="ab">
-                <img src="https://assetscdn1.paytm.com/images/cinema/Doctor-Strange--In-The-Multiverse-Of-Madness-r-705x750-36f0e140-b752-11ec-a762-319bdb0970f2.jpg"/>
-                <h1>Doctor Strange 2</h1>
-                <p>Rating:-4.5</p>
-                <button>Book now</button>
-
-            </div>
-            <div class="ab">
-                <img src="https://assetscdn1.paytm.com/images/cinema/Doctor-Strange--In-The-Multiverse-Of-Madness-r-705x750-36f0e140-b752-11ec-a762-319bdb0970f2.jpg"/>
-                <h1>Doctor Strange 2</h1>
-                <p>Rating:-4.5</p>
-                <button>Book now</button>
-
-            </div>
-        </div>
+        <h1>arpit</h1>
     </body>
 </html>
