--- a/mens.html
+++ b/mens.html
@@ -5,7 +5,20 @@
 </title>
     </head>
     <body>
+      <div >
+
+        <div>
+            <img src="https://masai-course.s3.ap-south-1.amazonaws.com/editor/uploads/2022-04-23/mensPage_879698.png" alt="">
+            <!-- <h1>Pause</h1>
+            <p>Men Cotton Long Sleeves Shrug</p>
+            <h1>350</h1> -->
+            
+        </div>
+<!-- 
+        <div>
+
+        </div> -->
+      </div>  
         
-        <h1>krishna kumar</h1>
     </body>
 </html>
