--- a/loginPage.html
+++ b/loginPage.html
@@ -5,8 +5,8 @@
     <title>Document</title>
     <style>
         body{
-            background-color: #FEE140;
-            background-image: linear-gradient(90deg, #FEE140 0%, #FA709A 100%);
+            background-color: #6F61BD;
+          
         }
         h1{
             margin-top: 100px;
@@ -39,8 +39,9 @@
             height: 50px;
             width: 300px;
             margin-top: 40px;
-            background-image: linear-gradient(90deg, #FEE140 0%, #FA709A 100%);
+            background-color: #6F61BD;
             border: 0px;
+            color:white;
 
         }
         #pass{
