--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,45 @@
 <html>
     <title></title>
+    <style>
+        #navbar{
+            width: 100%;
+            border-radius: 20px;
+            background-color: #1d2838;
+            height: 80px;
+            display: flex;
+            justify-content: space-between;
+
+        }
+        #navbar>div{
+            
+            height: 100%;
+            width: auto%;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #navbar>div>button{
+            border: 0px;
+            color: white;
+            background:#1d2838;
+            margin: 0px 30 0px 30px;
+        }
+        #navbar>div>h3{
+            margin-left: 30px;
+        }
+
+    </style>
     <body>
-        <h1>arpit</h1>
+        <div id="navbar">
+            <div><h3>Reebok</h3></div>
+            <div><button>Men</button>
+                 <button>Women</button>
+                 <button>Login</button>
+                 <button>Signup</button>
+            
+            </div>
+
+        </div>
     </body>
 </html>
