--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,5 @@
+
+
 <html>
     <title></title>
     <style>
@@ -28,18 +30,23 @@
         #navbar>div>h3{
             margin-left: 30px;
         }
+        #navbar>div>button>a{
+            color:white;
+            text-decoration: none;
+        }
 
     </style>
     <body>
         <div id="navbar">
             <div><h3>Reebok</h3></div>
-            <div><button>Men</button>
-                 <button>Women</button>
-                 <button>Login</button>
-                 <button>Signup</button>
+            <div><button> <a href="">Men</a> </button>
+                 <button><a href="">Women</a> </button>
+                 <button> <a href="">Login</a> </button>
+                 <button><a href="">Signup</a> </button>
             
             </div>
 
         </div>
     </body>
 </html>
+
