--- a/loginPage.html
+++ b/loginPage.html
@@ -18,7 +18,7 @@
             border: 1px solid red;
             background-color: white;
             border-radius: 20px;
-            margin-top: 100px;
+            margin-top: 15gitpx;
             text-align: center;
         }
 
