--- a/loginPage.html
+++ b/loginPage.html
@@ -14,11 +14,11 @@
         #father{
             height: 600px;
             width: 400px;
-            margin: auto;
+            
             border: 1px solid red;
             background-color: white;
             border-radius: 20px;
-            margin-top: 100px;
+            margin: 30px auto;
             text-align: center;
         }
 
